--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -235,4 +235,5 @@ jobs:
           tag_name: ${{ env.TAG_NAME }}
           files: |
             signed-apk/rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.apk
-
+generate-bridge-linux:
+    uses: ./.github/workflows/bridge.yml
